# C-Terminal

./: .gitignore  .gitmodules  CMakeLists.txt  meson.build  meson.options
include/: terminal.h
src/: constructor.h  terminal.c
